--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             </ul>
         </div>
     </nav>
-    <div class="about">
+    <div class="cover">
         <h1>Eveline's Portfolio</h1>
+    </div>
+    <div class="about">
+        
         <div class="container" id="about-container">
             <div class="box" id="box-about">
                 <img src="profile pic.jpeg">
