--- a/video.html
+++ b/video.html
@@ -22,23 +22,20 @@
         <h1>Eveline's Teaching Video</h1>
         <div class="container" id="about-container">
             <h2>Eveline Kawedar</h2>
-            <h4>My name is Eveline. Teaching is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam dignissimos dolor minima! Accusantium sequi, dicta atque rem incidunt eius modi consequuntur optio nihil sapiente quae ratione? Libero aliquid fuga accusamus.</h4>
+            <h4>My name is Eveline. This page is under construction. </h4>
             </div>
         </div>
         
     </div>
     <div class="video">
+        <h1>Compilation</h1>
+        <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="video" id="Scratch">
         <h1>Scratch Programming</h1>
         <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="video" id="python">
-        <h1>Python for Beginner</h1>
-        <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div class="video">
-        <h1>HTML5 and CSS3</h1>
-        <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+
     <div class="footer">
         <h1>Contact Me</h1>
         <div class="footer-logo">
