--- a/video.html
+++ b/video.html
@@ -12,7 +12,7 @@
         <img src="https://cdn.dribbble.com/users/1303230/screenshots/10786710/media/a3bf4bff950bdaee08b96bffe9336994.jpg?compress=1&resize=1200x900&vertical=top">
         <div class="nav-links">
             <ul>
-                <li><a href="home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="video.html">Video</a></li>
             </ul>
