--- a/video.html
+++ b/video.html
@@ -22,18 +22,18 @@
         <h1>Eveline's Teaching Video</h1>
         <div class="container" id="about-container">
             <h2>Eveline Kawedar</h2>
-            <h4>My name is Eveline. This page is under construction. </h4>
+            <h4>This page is under construction. </h4>
             </div>
         </div>
         
     </div>
     <div class="video">
-        <h1>Compilation</h1>
-        <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Online Teaching Compilation Video</h1>
+        <iframe width="823" height="488" src="https://www.youtube.com/embed/0lwzp4LFdgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="video" id="Scratch">
         <h1>Scratch Programming</h1>
-        <iframe width="823" height="488" src="https://www.youtube.com/embed/E1xkXZs0cAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="823" height="488" src="https://www.youtube.com/embed/Y_qZlYmLw74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="footer">
