--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
         <h1>Eveline's Teaching Video</h1>
         <div class="container" id="about-container">
             <h2>Eveline Kawedar</h2>
-            <h4>This page is under construction. </h4>
+            <h4>It is such a blessing to be able to work as a teacher and help kids all over Indonesia to learn and grow their skills in logical thinking and programming. I had teach more than 100 students in a form of private classes, group classes, and after-school activities. I teach Computer Science Theory, Scratch Programming, HTML5 and CSS3, and Basic Python. Go ahead and check the video below to take a look at a compilation of my online classes. Thanks for visiting my website!</h4>
             </div>
         </div>
         
