update change pallete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="https://cdn.dribbble.com/users/1303230/screenshots/10786710/media/a3bf4bff950bdaee08b96bffe9336994.jpg?compress=1&resize=1200x900&vertical=top">
+        <img src="logo_4.png">
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -36,8 +36,47 @@
             </div>
         </div>
     </div>
-    <div class="project">
-        <h1>These are the topic that I teach</h1>
+    <div class="content" id="content-biodata">
+        <h1>Biodata</h1>
+        <table>
+            <tr>
+                <th colspan="2">Biodata</th>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td>Eveline</td>
+            </tr>
+            <tr>
+                <td>Nationality</td>
+                <td>Indonesia</td>
+            </tr>
+            <tr>
+                <td>Major</td>
+                <td>Computer Engineering, Binus University</td>
+            </tr>
+            <tr>
+                <th colspan="2">Working Experience</th>
+            </tr>
+            <tr>
+                <td>2021-present</td>
+                <td>Coding Teacher for Kids at The CodingStar</td>
+            </tr>
+            <tr>
+                <td>2018-present</td>
+                <td>Computer Science Tuition Teacher for Cambridge Examination at Private Tuition</td>
+            </tr>
+            <tr>
+                <td>2018-present</td>
+                <td>Computer Science Tuition Teacher for Cambridge Examination at Mavis Tuition Center</td>
+            </tr>
+            <tr>
+                <th colspan="2">Eveline Kawedar ©  2022</th>
+            </tr>
+        </table>
+        
+    </div>
+    <div class="content" id="content-project">
+        <h1>These are the fields that I teach</h1>
         <div class="container"  id="project-container">
             <div class="box">
                 <img src="https://scratch.mit.edu/images/scratch-og.png">
@@ -56,12 +95,15 @@
             </div>
         </div>
     </div>
+    <div class="about" id="about-logo">
+        <img src="logo_4.png">
+    </div>
     <div class="footer">
         <h1>Contact Me</h1>
         <div class="footer-logo">
             <a href="https://wa.me/082112844817"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/WhatsApp_logo-color-vertical.svg/2048px-WhatsApp_logo-color-vertical.svg.png"></a>
             <a href="https://www.instagram.com/eveline027/"><img src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-instagram-new-logo-vector-download-13.png"></a>
-            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" id="imglink"></a>
+            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://www.freepnglogos.com/uploads/linkedin-logo-design-30.png" id="imglink"></a>
         </div>
             <h4>Eveline Kawedar ©  2022</h4>
     </div>
