--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="https://cdn.dribbble.com/users/1303230/screenshots/10786710/media/a3bf4bff950bdaee08b96bffe9336994.jpg?compress=1&resize=1200x900&vertical=top">
+        <img src="logo_4.png">
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,7 +21,9 @@
     <div class="about">
         <h1>Projects</h1>
         <div class="container" id="about-container">
-            <p>In this section I will share the projects that I made and my student made.</p>
+            <p>In this page I will share the projects that I made and my student made.</p>
+            <p>The first section I post some scratch games that I made with my students, you can click the green flag to starty the game.</p>
+            <p>The second section I post some Python Program  that I code with my students, you can click on the link to see the code.</p>
         </div>
         <h2>Scratch Programming</h2>
         <div class="container" id="scratch">
@@ -63,7 +65,7 @@
         <div class="footer-logo">
             <a href="https://wa.me/082112844817"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/WhatsApp_logo-color-vertical.svg/2048px-WhatsApp_logo-color-vertical.svg.png"></a>
             <a href="https://www.instagram.com/eveline027/"><img src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-instagram-new-logo-vector-download-13.png"></a>
-            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" id="imglink"></a>
+            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://www.freepnglogos.com/uploads/linkedin-logo-design-30.png" id="imglink"></a>
         </div>
             <h4>Eveline Kawedar ©  2022</h4>
     </div>
