--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="https://cdn.dribbble.com/users/1303230/screenshots/10786710/media/a3bf4bff950bdaee08b96bffe9336994.jpg?compress=1&resize=1200x900&vertical=top">
+        <img src="logo_4.png">
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,8 +21,8 @@
     <div class="about">
         <h1>Eveline's Teaching Video</h1>
         <div class="container" id="about-container">
-            <h2>Eveline Kawedar</h2>
-            <h4>It is such a blessing to be able to work as a teacher and help kids all over Indonesia to learn and grow their skills in logical thinking and programming. I had teach more than 100 students in a form of private classes, group classes, and after-school activities. I teach Computer Science Theory, Scratch Programming, HTML5 and CSS3, and Basic Python. Go ahead and check the video below to take a look at a compilation of my online classes. Thanks for visiting my website!</h4>
+            <h2>Thanks for visiting my website!</h2>
+            <h4>It is such a blessing to be able to work as a teacher and help kids all over Indonesia to learn and grow their skills in logical thinking and programming. I had teach more than 100 students in a form of private classes, group classes, and after-school activities. I teach Computer Science Theory, Scratch Programming, HTML5 and CSS3, and Basic Python. Go ahead and check the video below to take a look at a compilation of my online classes. </h4>
             </div>
         </div>
         
@@ -35,16 +35,18 @@
         <h1>Scratch Programming</h1>
         <iframe width="823" height="488" src="https://www.youtube.com/embed/Y_qZlYmLw74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
+    <div class="about" id="about-logo">
+        <img src="logo_4.png">
+    </div>
     <div class="footer">
         <h1>Contact Me</h1>
         <div class="footer-logo">
             <a href="https://wa.me/082112844817"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/WhatsApp_logo-color-vertical.svg/2048px-WhatsApp_logo-color-vertical.svg.png"></a>
             <a href="https://www.instagram.com/eveline027/"><img src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-instagram-new-logo-vector-download-13.png"></a>
-            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" id="imglink"></a>
+            <a href="https://www.linkedin.com/in/eveline-kawedar/"><img src="https://www.freepnglogos.com/uploads/linkedin-logo-design-30.png" id="imglink"></a>
         </div>
             <h4>Eveline Kawedar ©  2022</h4>
     </div>
-
+    
 </body>
 </html>
